argocd/patch-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "true"
