argocd/patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-repo-server
    spec:
      containers:
      - name: argocd-repo-server
        volumeMounts:
        # for tanka plugin
        - name: sideloader
          mountPath: /sideloader
      volumes:
      # for tanka plugin
      - name: sideloader
        emptyDir: {}
