argocd/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - kind: Gateway
      name: kubernetes-gateway
      namespace: istio-system
  hostnames:
    - argo.awes.one
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
